style.css
* {
  margin: 0%;
  padding: 0%;
  color: white;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

html,
body {
  width: 100%;
  height: 100%;
}

#cursor {
  background-color: #95c11e;
  height: 25px;
  width: 25px;
  border-radius: 50%;
  position: fixed;
  z-index: 99;
}

#cursor-blur {
  background-color: #95c11e;
  height: 300px;
  width: 300px;
  border-radius: 50%;
  position: fixed;
  filter: blur(150px);
  z-index: 9;
}

#nav {
  display: flex;
  position: fixed;
  height: 125px;
  width: 100%;
  gap: 40px;
  align-items: center;
  justify-content: flex-start;
  z-index: 99;
}

#nav h4 {
  text-transform: uppercase;
  color: white;
  font-family: "Montserrat", sans-serif;
}

#nav img {
  height: 100px;
  width: 100px;
  padding-left: 5%;
}

video {
  height: 100%;
  width: 100%;
  object-fit: cover;
  /* object-fit : cover ; this style is applied , so that video can be take full website  */
  position: fixed;
  z-index: -2;
}

#main {
  position: relative;
  background-color: rgba(0, 0, 0, 0.473);
}

#page1 {
  position: relative;
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

/* justify-content and align-items works with display flex property only */

#page1 h1 {
  font-size: 150px;
  font-weight: 700;
  position: relative;
}

#page1 h1::before {
  content: "EAT. DRINK. PLAY.";
  color: black;
  position: absolute;
  top: -5px;
  left: -5px;
  font-size: 150px;
  font-weight: 700;
  -webkit-text-stroke: 1px #95c11e;
  z-index: -2;
}

#page1 h2 {
  font-size: 30px;
  font-weight: 600;
  padding: 1% 1%;
  font-family: "Montserrat", sans-serif;
}

#page1 p {
  font-size: 19px;
  font-weight: 400;
  font-family: "Montserrat", sans-serif;
}

#page2 {
  min-height: 100vh; /* under stand this difference between height vs min-heinght */
  width: 100%;
  position: relative;
}

#scroller {
  white-space: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
  position: relative;
  z-index: 10;
}

#scroller-in {
  animation-name: scroll;
  animation-duration: 14s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

#scroller::-webkit-scrollbar {
  display: none;
}

#scroller h4 {
  display: inline-block;
  white-space: nowrap;
  font-size: 100px;
  font-weight: 700;
  margin-right: 10px;
  color: transparent;
  transition: all linear 0.4s;
  -webkit-text-stroke: 2px white;
}

#scroller-in h4:hover {
  color: #95c11e;
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

#aboutus {
  height: 40vh;
  width: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

#aboutus div {
  padding-right: 5%;
  padding-left: 5%;
  text-align: center;
}

#aboutustext h3 {
  margin-bottom: 5%;
  font-size: 40px;
  font-weight: 700;
  text-transform: uppercase;
  font-family: "Montserrat", sans-serif;
}

#aboutustext p {
  font-size: 20px;
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
}

.aboutusimg {
  height: 80%;
  width: 20%;
  border-radius: 2%;
  object-fit: cover;
  margin: 3% 3%;
}

#cards-container {
  height: 60vh;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  gap: 5%;
}

.card {
  height: 80%;
  width: 24%;
  border-radius: 5%;
  background-size: cover;
  background-position: center;
  position: relative;
  overflow: hidden;
  z-index: 10;
  transition: all ease 0.6s;
}

#card-1 {
  background-image: url("https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-toptracer-1024x682.jpg?strip=all&lossy=1&sharp=1&ssl=1");
}

#card-2 {
  background-image: url("https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/hero-4-1024x1024.jpg?strip=all&lossy=1&sharp=1&ssl=1");
}

#card-3 {
  background-image: url("https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-lessons-1024x682.jpg?strip=all&lossy=1&sharp=1&ssl=1");
}

.overlay {
  height: 100%;
  width: 100%;
  background-color: #95c11e;
  padding-top: 160px;
  position: relative;
  z-index: 10;
  opacity: 0;
  transition: all ease 0.6s; /* making the animation smooth*/
}

.overlay h4 {
  color: white;
  font-size: 35px;
  font-weight: 700;
  padding-bottom: 10px;
}

.overlay p {
  font-size: 20px;
  font-weight: 350;
  color: #000;
}

.card:hover .overlay {
  opacity: 1;
}

.card:hover {
  transform: rotate3d(-1, 1, 0, 20deg);
}

#green-div {
  height: 30vh;
  width: 100%;
  margin-top: 3%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  background: linear-gradient(to left bottom, #2da438, #ace022);
  position: relative;
  overflow: hidden;
}

#green-div h4 {
  font-size: 30px;
  color: #000;
  text-transform: uppercase;
}

#green-div img,
#footer-container img {
  height: 100%;
  width: 18%;
  object-fit: cover;
}

.green-div-img-1 {
  transform: scaleX(-1);
  position: relative;
  right: 9%;
}

.green-div-img-2 {
  position: relative;
  right: -9%;
}

#page3 {
  height: 100vh;
  width: 100%;
  background-color: #000;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

#page3 > p {
  width: 50%;
  font-size: 25px;
  font-weight: 700;
  line-height: 35px;
  text-align: center;
}

#colon1 {
  height: 60px;
  position: absolute;
  left: 15%;
  top: 20%;
}

#colon2 {
  height: 60px;
  position: absolute;
  right: 20%;
  bottom: 20%;
  transform: rotate(180deg);
}

#page4 {
  height: 60vh;
  width: 100%;
  background-color: #000;
  position: relative;
}

#elem {
  height: 20vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

#elem1,
#elem2,
#elem3 {
  height: 100%;
  width: 28%;
  text-align: center;
  align-content: center;
  margin: 1%;
  border-radius: 10px;
  background: linear-gradient(to left bottom, #2da438, #ace022);
}

#elem1 h2,
#elem2 h2,
#elem3 h2 {
  color: #000;
  font-size: 30px;
  font-weight: 750;
}

#footer-container {
  height: 40vh;
  width: 100%;
  margin-top: 3%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  background: linear-gradient(to left bottom, #2da438, #ace022);
  position: relative;
  overflow: hidden;
}

#footer-content {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 100px;
  left: 8%;
}

#footer-content img {
  height: 10%;
  width: 12%;
}

#footer-content-list1 {
  text-align: left;
}

#footer-content-list1 h4 {
  font-size: 25px;
  line-height: 40px;
  color: #000;
}

#footer-content-list2 {
  text-align: left;
}

#footer-content-list2 h4 {
  font-size: 25px;
  line-height: 40px;
  color: #000;
}

#footer-content-address {
  text-align: left;
}

#footer-content-address h3 {
  font-size: 20px;
  color: #000;
}

#contact-number {
  display: flex;
  font-weight: 550;
}

#contact-number p {
  color: #000;
}

#footer-content-address h4 {
  font-size: 30px;
  color: #000;
}

#copyrighttext {
  position: absolute;
  bottom: 4%;
  left: 8%;
}

#copyrighttext p {
  color: #000;
  font-size: 20px;
  font-weight: 400;
}

